@@ -30,16 +30,17 @@ class RevisionDeleter {
 	/**
 	 * Gets an array of message keys describing the changes made to the visibility
 	 * of the revision. If the resulting array is $arr, then $arr[0] will contain an
-	 * array of strings describing the items that were hidden, $arr[2] will contain
-	 * an array of strings describing the items that were unhidden, and $arr[3] will
+	 * array of strings describing the items that were hidden, $arr[1] will contain
+	 * an array of strings describing the items that were unhidden, and $arr[2] will
 	 * contain an array with a single string, which can be one of "applied
 	 * restrictions to sysops", "removed restrictions from sysops", or null.
 	 *
 	 * @param $n Integer: the new bitfield.
 	 * @param $o Integer: the old bitfield.
 	 * @return An array as described above.
+	 * @since 1.19 public
 	 */
-	protected static function getChanges( $n, $o ) {
+	public static function getChanges( $n, $o ) {
 		$diff = $n ^ $o;
 		$ret = array( 0 => array(), 1 => array(), 2 => array() );
 		// Build bitfield changes in language
@@ -57,47 +58,6 @@ class RevisionDeleter {
 				$ret[2][] = 'revdelete-unrestricted';
 		}
 		return $ret;
-	}
-
-	/**
-	 * Gets a log message to describe the given revision visibility change. This
-	 * message will be of the form "[hid {content, edit summary, username}];
-	 * [unhid {...}][applied restrictions to sysops] for $count revisions: $comment".
-	 *
-	 * @param $count Integer: The number of effected revisions.
-	 * @param $nbitfield Integer: The new bitfield for the revision.
-	 * @param $obitfield Integer: The old bitfield for the revision.
-	 * @param $language Language object to use
-	 * @param $isForLog Boolean
-	 */
-	public static function getLogMessage( $count, $nbitfield, $obitfield, $language, $isForLog = false ) {
-		$changes = self::getChanges( $nbitfield, $obitfield );
-		array_walk( $changes, array( __CLASS__, 'expandMessageArray' ), $language );
-
-		$changesText = array();
-
-		if( count( $changes[0] ) ) {
-			$changesText[] = wfMsgExt( 'revdelete-hid', array( 'parsemag', 'language' => $language ), $language->commaList( $changes[0] ) );
-		}
-		if( count( $changes[1] ) ) {
-			$changesText[] = wfMsgExt( 'revdelete-unhid', array( 'parsemag', 'language' => $language ), $language->commaList( $changes[1] ) );
-		}
-
-		$s = $language->semicolonList( $changesText );
-		if( count( $changes[2] ) ) {
-			$s .= $s ? ' (' . $changes[2][0] . ')' : ' ' . $changes[2][0];
-		}
-
-		$msg = $isForLog ? 'logdelete-log-message' : 'revdelete-log-message';
-		return wfMsgExt( $msg, array( 'parsemag', 'language' => $language ), $s, $language->formatNum($count) );
-	}
-
-	private static function expandMessageArray( &$msg, $key, $language ) {
-		if ( is_array ( $msg ) ) {
-			array_walk( $msg, array( __CLASS__, 'expandMessageArray' ), $language );
-		} else {
-			$msg = wfMsgExt( $msg, array( 'parsemag', 'language' => $language ) );
-		}
 	}
 
 	// Get DB field name for URL param...
