@@ -768,10 +768,6 @@ $wgMessageStructure = array(
 		'revdelete-unsuppress',
 		'revdelete-log',
 		'revdelete-submit',
-		'revdelete-logentry',
-		'logdelete-logentry',
-		'revdelete-logaction',
-		'logdelete-logaction',
 		'revdelete-success',
 		'revdelete-failure',
 		'logdelete-success',
@@ -781,15 +777,6 @@ $wgMessageStructure = array(
 		'revdel-restore-visible',
 		'pagehist',
 		'deletedhist',
-		'revdelete-content',
-		'revdelete-summary',
-		'revdelete-uname',
-		'revdelete-restricted',
-		'revdelete-unrestricted',
-		'revdelete-hid',
-		'revdelete-unhid',
-		'revdelete-log-message',
-		'logdelete-log-message',
 		'revdelete-hide-current',
 		'revdelete-show-no-access',
 		'revdelete-modify-no-access',
@@ -1870,8 +1857,6 @@ $wgMessageStructure = array(
 		'actioncomplete',
 		'actionfailed',
 		'deletedtext',
-		'deletedarticle',
-		'suppressedarticle',
 		'dellogpage',
 		'dellogpagetext',
 		'deletionlog',
@@ -1977,7 +1962,6 @@ $wgMessageStructure = array(
 		'undeletereset',
 		'undeleteinvert',
 		'undeletecomment',
-		'undeletedarticle',
 		'undeletedrevisions',
 		'undeletedrevisions-files',
 		'undeletedfiles',
@@ -3513,6 +3497,25 @@ $wgMessageStructure = array(
 		'confirm-unwatch-button',
 	),
 	'logging' => array(
+		'logentry-delete-delete',
+		'logentry-delete-restore',
+		'logentry-delete-event',
+		'logentry-delete-revision',
+		'logentry-delete-event-legacy',
+		'logentry-delete-revision-legacy',
+		'logentry-suppress-delete',
+		'logentry-suppress-event',
+		'logentry-suppress-revision',
+		'logentry-suppress-event-legacy',
+		'logentry-suppress-revision-legacy',
+		'revdelete-content-hid',
+		'revdelete-summary-hid',
+		'revdelete-uname-hid',
+		'revdelete-content-unhid',
+		'revdelete-summary-unhid',
+		'revdelete-uname-unhid',
+		'revdelete-restricted',
+		'revdelete-unrestricted',
 		'logentry-move-move',
 		'logentry-move-move-noredirect',
 		'logentry-move-move_redir',
